--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 /History/*
 /__Previews/*
+/Project Logs for Flexprint_Serverport/
+/Flexprint_Serverport.PrjPcbStructure/
+RM_A3.SchDot
+RM_A4.SchDot
+RM_Logo.bmp
+RM_Logo.png
